--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
+Babel==2.6.0
 confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
-Django==1.11
+Django==1.11.20
+django-bootstrap3==11.0.0
 django-bootstrap4==0.0.7
+django-contrib-comments==1.9.1
 django-heroku==0.3.1
+django-phonenumber-field==2.2.0
 django-registration==2.4.1
+django-vote==2.1.7
+phonenumberslite==8.10.6
+Pillow==5.4.1
 psycopg2==2.7.7
 python-decouple==3.1
 pytz==2018.9
+votes==1.0.1
 whitenoise==4.1.2
