--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 Babel==2.6.0
+certifi==2019.3.9
+chardet==3.0.4
 confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
 Django==1.11.20
@@ -9,10 +11,14 @@ django-heroku==0.3.1
 django-phonenumber-field==2.2.0
 django-registration==2.4.1
 django-vote==2.1.7
+gunicorn==19.9.0
+idna==2.8
 phonenumberslite==8.10.6
 Pillow==5.4.1
 psycopg2==2.7.7
 python-decouple==3.1
 pytz==2018.9
+requests==2.21.0
+urllib3==1.24.1
 votes==1.0.1
 whitenoise==4.1.2
